# StemKratos

./: .gitignore  MANIFEST.in  README.md  build_wheels_linux.sh  requirements.txt  setup.cfg  setup.py  tox.ini  version.txt
.github/: CODEOWNERS
.github/workflows/: tests.yml
KratosGeoMechanics/KratosMultiphysics/: check_same_model_part_using_skin_process.py
KratosGeoMechanics/libs/: KratosGeoMechanicsApplication.pyd  KratosLinearSolversApplication.pyd  KratosLinearSolversCore.pyd  KratosStructuralMechanicsApplication.pyd
LICENSE/: license_GeoMechanicsApplication.txt  license_KratosMultiPhysics.txt  license_StructuralMechanicsApplication.txt
StemApplication/: geomechanics_U_Pw_solver.py  geomechanics_analysis.py  geomechanics_newton_raphson_strategy.py  geomechanics_solvers_wrapper.py  uvec_controller.py
StemKratos/: KratosLinearSolversApplication-9.4.2a2448-cp310-cp310-win_amd64.whl  KratosLinearSolversApplication-9.4.2a2449-cp310-cp310-win_amd64.whl  KratosLinearSolversApplication-9.4.2a2452-cp310-cp310-win_amd64.whl  KratosLinearSolversApplication-9.4.2a2455-cp310-cp310-win_amd64.whl  KratosStructuralMechanicsApplication-9.4.2a2448-cp310-cp310-win_amd64.whl  KratosStructuralMechanicsApplication-9.4.2a2449-cp310-cp310-win_amd64.whl  KratosStructuralMechanicsApplication-9.4.2a2452-cp310-cp310-win_amd64.whl  KratosStructuralMechanicsApplication-9.4.2a2455-cp310-cp310-win_amd64.whl  __init__.py  __version__.py
StemKratos/StemApplication/: fast_json_output_process.py  geomechanics_U_Pw_solver.py  geomechanics_analysis.py  geomechanics_newton_raphson_strategy.py  geomechanics_solvers_wrapper.py  run_multiple_stages.py  set_moving_load_process.py  set_multiple_moving_loads_process.py  set_nodal_parameters_process.py  set_parameter_field_process.py  uvec_controller.py
StemKratos/wheels/: KratosGeoMechanicsApplication-10.1.0.1-cp310-cp310-win_amd64.whl  KratosGeoMechanicsApplication-10.1.0.1-cp311-cp311-win_amd64.whl  KratosGeoMechanicsApplication-10.1.0.1-cp312-cp312-win_amd64.whl  (+85 more)
tests/: test_add_nodal_parameters.py  test_call_uvec.py  test_call_uvec_multistage.py  test_call_uvec_multistage_le_solver.py  test_call_uvec_multistage_noh_bathe.py  test_fast_json_output_process.py  test_geomechanics_U_Pw_solver.py  test_moving_load_multistage.py  utils.py
tmp_files/: Dockerfile  build.sh  configure.sh
wheels_linux/: Dockerfile  build.sh  configure.sh
(+168 files in other folders)
