[metadata]
name = StemKratos
version = attr: StemKratos.__version__
author = attr: StemKratos.__author__
description = KratosMultiphysics for STEM
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: BSD 4
    Operating System :: Windows
[options]
packages = find:

python_requires = ==3.10.*
install_requires =
	KratosMultiphysics @ https://github.com/StemVibrations/StemKratos/raw/update_wheels/StemKratos/KratosMultiphysics-9.4.2a2457-cp310-cp310-win_amd64.whl
	KratosLinearSolversApplication @ https://github.com/StemVibrations/StemKratos/raw/update_wheels/StemKratos/KratosLinearSolversApplication-9.4.2a2457-cp310-cp310-win_amd64.whl
	KratosStructuralMechanicsApplication @ https://github.com/StemVibrations/StemKratos/raw/update_wheels/StemKratos/KratosStructuralMechanicsApplication-9.4.2a2457-cp310-cp310-win_amd64.whl
	KratosGeoMechanicsApplication @ https://github.com/StemVibrations/StemKratos/raw/update_wheels/StemKratos/KratosGeoMechanicsApplication-9.4.2a2457-cp310-cp310-win_amd64.whl

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    tox>=4.4
