[metadata]
name = StemKratos
version = attr: StemKratos.__version__
author = attr: StemKratos.__author__
description = KratosMultiphysics for STEM
long_description = file: ReadMe.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License
    Operating System :: Microsoft :: Windows
	Operating System :: Unix
[options]
packages =
    StemKratos
    StemKratos.StemApplication

python_requires = >=3.10, <3.13

[options.extras_require]
testing =
    pytest>=7.2
    pytest-cov>=4.0
    tox>=4.4
